--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,13 @@
 steps:
+# Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'hello-world', '.']
-  dir: 'cloudcode/hello-world/src'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/app1', '.']
+# Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['run', '--name', 'hello-world-test', '--network', 'cloudbuild', '-p', '5000', '-d', 'hello-world']
-- name: 'qnib/pytest'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    pip install -r requirements.txt
-    cd cloudcode/hello-world/tests
-    pytest -s ./
-  env:
-      - 'E2E_URL=http://hello-world-test:5000'
+  args: ['push', 'gcr.io/$PROJECT_ID/app1']
+# Deploy container image to Cloud Run
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['run', 'deploy', 'antheme', '--image', 'gcr.io/$PROJECT_ID/app1', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
+images:
+- gcr.io/$PROJECT_ID/app1
+# [END cloudbuild_run_example_builddeploy]
